fixed the z-index

--- a/main.css
+++ b/main.css
@@ -197,12 +197,13 @@ input {
     position: absolute;
     left: -8em;
     top: -12em;
-    z-index: -1;
+    z-index: -3;
     width:130%;
   }
 
   .form{
-    margin-top: 6em
+    margin-top: 6em;
+    z-index:10;
   }
   .mobile{
     display: block;
